# financial_news

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
assets/: README.md
configs/: default.yaml
financial_news_sentiment/: __init__.py  config.py  correlation.py  data.py  features.py  inference.py  modeling.py
scripts/: batch_predict.py  evaluate_model.py  make_sample_dataset.py  run_correlation.py  train_model.py
tests/: test_data.py  test_features.py
